# gyus-ai-study

./: README.md  pyproject.toml
deep-learning-from-scratch/: chapter3.ipynb  chapter4.ipynb  chapter5.ipynb  forward.py  two_layer_net.py
deep-learning-from-scratch/common/: functions.py  layers.py
deep-learning-from-scratch/dataset/: gradient_method.py
hello-python/.ipynb_checkpoints/: numpy-test-checkpoint.ipynb  퍼셉트론-checkpoint.ipynb
hello-python/chapter3/: 3_6_손글씨숫자인식.ipynb  chapter3_활성화함수.ipynb  numpy-test.ipynb  test-numpy.py
hello-python/chapter3/.ipynb_checkpoints/: matplotlib-test-checkpoint.ipynb
hello-python/chapter4/: 4장신경망.ipynb  common.ipynb  two_layer_net.py
hello-python/chapter4/.ipynb_checkpoints/: 4장신경망-checkpoint.ipynb
src/gyus_ai_study/: __init__.py
utils/: 유틸들.ipynb
