[project]
name = "gyus-ai-study"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "andy.sg", email = "andy.sg@kakaoent.com" }
]
dependencies = [
    "numpy>=2.1.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gyus_ai_study"]
