[project]
name = "gyus-ai-study"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "andy.sg", email = "andy.sg@kakaoent.com" }
]
dependencies = [
    "numpy==1.26.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "tensorflow>=2.17.0",
    "image>=1.5.33",
    "import-ipynb>=0.1.4",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gyus_ai_study"]
